# groove-daemon

./: .gitignore  README.md  pyproject.toml
app/: album_loader.py  audio_detector.py  discogs_download.py  main.py  track_estimator.py
openspec/: project.md
openspec/changes/archive/2026-02-14-add-audio-detection/: proposal.md  tasks.md
openspec/changes/archive/2026-02-14-add-audio-detection/specs/audio-detection/: spec.md
openspec/changes/archive/2026-02-14-add-debug-playback-offset/: proposal.md  tasks.md
openspec/changes/archive/2026-02-14-add-debug-playback-offset/specs/audio-detection/: spec.md
openspec/changes/archive/2026-02-14-add-discogs-downloader/: proposal.md  tasks.md
openspec/changes/archive/2026-02-14-add-discogs-downloader/specs/discogs-import/: spec.md
openspec/changes/archive/2026-02-14-add-track-estimation/: proposal.md  tasks.md
openspec/changes/archive/2026-02-14-add-track-estimation/specs/track-estimation/: spec.md
openspec/specs/audio-detection/: spec.md
openspec/specs/discogs-import/: spec.md
openspec/specs/track-estimation/: spec.md
