[tool.poetry]
name = "sound-detector"
version = "0.1.0"
description = "Vinyl Playback Monitor - Non-invasive microphone-based playback detection"
authors = ["Your Name <you@example.com>"]
readme = "spec.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0"
pyaudio = "^0.2.14"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
